--- a/docs/imaging.ipynb
+++ b/docs/imaging.ipynb
@@ -212,7 +212,9 @@
     }
    ],
    "source": [
-    "metadata_files = ln.Artifact.get(key = \"input_data_imaging_usecase/metadata_files.csv\").load()\n",
+    "metadata_files = ln.Artifact.get(\n",
+    "    key=\"input_data_imaging_usecase/metadata_files.csv\"\n",
+    ").load()\n",
     "metadata_files.head(2)"
    ]
   },
@@ -297,17 +299,17 @@
     "        ln.Feature(name=\"genotype\", dtype=ln.ULabel.name).save(),\n",
     "        ln.Feature(name=\"stimulation\", dtype=ln.ULabel.name).save(),\n",
     "        ln.Feature(name=\"cell_line\", dtype=bt.CellLine.name).save(),\n",
-    "        ln.Feature(\n",
-    "            name=\"cell_line_clone\", dtype=ln.ULabel.name\n",
-    "        ).save(),\n",
+    "        ln.Feature(name=\"cell_line_clone\", dtype=ln.ULabel.name).save(),\n",
     "        ln.Feature(name=\"channel\", dtype=ln.ULabel.name).save(),\n",
     "        ln.Feature(name=\"FOV\", dtype=ln.ULabel.name).save(),\n",
     "        ln.Feature(name=\"magnification\", dtype=ln.ULabel.name).save(),\n",
     "        ln.Feature(name=\"microscope\", dtype=ln.ULabel.name).save(),\n",
     "        ln.Feature(name=\"imaged structure\", dtype=ln.ULabel.name).save(),\n",
-    "        ln.Feature(name=\"resolution\", dtype=float, description = \"conversion factor for px to µm\").save()\n",
+    "        ln.Feature(\n",
+    "            name=\"resolution\", dtype=float, description=\"conversion factor for px to µm\"\n",
+    "        ).save(),\n",
     "    ],\n",
-    "    coerce_dtype=True\n",
+    "    coerce_dtype=True,\n",
     ").save()"
    ]
   },
@@ -425,11 +427,12 @@
     "# TODO when moving to the local instance - filter for the Artifacts and don't create them from scratch\n",
     "artifacts = []\n",
     "for idx, row in metadata_files.iterrows():\n",
-    "    artifact = ln.Artifact(row[\"image_path\"], \n",
-    "                           description=\"raw image of U2OS cells stained for autophagy markers\",\n",
-    "                           )\n",
+    "    artifact = ln.Artifact(\n",
+    "        row[\"image_path\"],\n",
+    "        description=\"raw image of U2OS cells stained for autophagy markers\",\n",
+    "    )\n",
     "    artifact.save()\n",
-    "    artifact.cell_lines.add(bt.CellLine.filter(name = row.cell_line).one())\n",
+    "    artifact.cell_lines.add(bt.CellLine.filter(name=row.cell_line).one())\n",
     "\n",
     "    artifact.features.add_values(\n",
     "        {\n",
@@ -439,14 +442,14 @@
     "            \"channel\": row.channel,\n",
     "            \"imaged structure\": row[\"imaged structure\"],\n",
     "            \"study\": \"autophagy imaging\",\n",
-    "            \"FOV\": row.FOV, \n",
+    "            \"FOV\": row.FOV,\n",
     "            \"magnification\": row.magnification,\n",
     "            \"microscope\": row.microscope,\n",
     "            \"resolution\": row.resolution,\n",
     "        }\n",
     "    )\n",
     "\n",
-    "    artifacts.append(artifact)  "
+    "    artifacts.append(artifact)"
    ]
   },
   {
@@ -565,7 +568,7 @@
     "    key=\"Annotated autophagy imaging raw images\",\n",
     "    description=\"annotated microscopy images of cells stained for autophagy markers\",\n",
     ")\n",
-    "collection.save()  "
+    "collection.save()"
    ]
   },
   {
@@ -613,25 +616,33 @@
     }
    ],
    "source": [
-    "FOV_example_images = metadata_files.sort_values(by = [\"cell_line_clone\", \"stimulation\", \"FOV\"]).head(3).reset_index(drop=True)\n",
+    "FOV_example_images = (\n",
+    "    metadata_files.sort_values(by=[\"cell_line_clone\", \"stimulation\", \"FOV\"])\n",
+    "    .head(3)\n",
+    "    .reset_index(drop=True)\n",
+    ")\n",
     "\n",
     "fig, axs = plt.subplots(1, 3, figsize=(15, 5))\n",
     "for idx, row in FOV_example_images.iterrows():\n",
     "    print(row[\"image_path\"])\n",
-    "    path = ln.Artifact.get(key = row[\"image_path\"]).load().path\n",
+    "    path = ln.Artifact.get(key=row[\"image_path\"]).load().path\n",
     "    image = imread(path)\n",
     "    axs[idx].imshow(image)\n",
-    "    axs[idx].set_title(f'{row[\"imaged structure\"]}')\n",
+    "    axs[idx].set_title(f\"{row['imaged structure']}\")\n",
     "    axs[idx].axis(\"off\")\n",
     "\n",
-    "FOV_example_images = metadata_files.sort_values(by = [\"cell_line_clone\", \"stimulation\", \"FOV\"]).tail(3).reset_index(drop=True)\n",
+    "FOV_example_images = (\n",
+    "    metadata_files.sort_values(by=[\"cell_line_clone\", \"stimulation\", \"FOV\"])\n",
+    "    .tail(3)\n",
+    "    .reset_index(drop=True)\n",
+    ")\n",
     "\n",
     "fig, axs = plt.subplots(1, 3, figsize=(15, 5))\n",
     "for idx, row in FOV_example_images.iterrows():\n",
-    "    path = ln.Artifact.get(key = row[\"image_path\"]).load().path\n",
+    "    path = ln.Artifact.get(key=row[\"image_path\"]).load().path\n",
     "    image = imread(path)\n",
     "    axs[idx].imshow(image)\n",
-    "    axs[idx].set_title(f'{row[\"imaged structure\"]}')\n",
+    "    axs[idx].set_title(f\"{row['imaged structure']}\")\n",
     "    axs[idx].axis(\"off\")"
    ]
   },
