--- a/docs/imaging2.ipynb
+++ b/docs/imaging2.ipynb
@@ -484,10 +484,12 @@
     "        \"single_cell_index\"\n",
     "    ].shape[0]\n",
     "    annotation[\"channel\"] = [\n",
-    "        ln.ULabel.get(name=channel_name) for channel_name in [\"DAPI\", \"mCherry\", \"Alexa488\"]\n",
+    "        ln.ULabel.get(name=channel_name)\n",
+    "        for channel_name in [\"DAPI\", \"mCherry\", \"Alexa488\"]\n",
     "    ]\n",
     "    annotation[\"imaged structure\"] = [\n",
-    "        ln.ULabel.get(name=structure_name) for structure_name in [\"LckLip-mNeon\", \"DNA\", \"mCherry-LC3B\"]\n",
+    "        ln.ULabel.get(name=structure_name)\n",
+    "        for structure_name in [\"LckLip-mNeon\", \"DNA\", \"mCherry-LC3B\"]\n",
     "    ]\n",
     "\n",
     "    artifact = ln.Artifact(\n",
