--- a/docs/imaging3.ipynb
+++ b/docs/imaging3.ipynb
@@ -59,9 +59,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get single-cell images and config \n",
-    "sc_datasets = ln.Artifact.filter(ulabels__name=\"autophagy imaging\").filter(ulabels__name=\"scportrait single-cell images\")\n",
-    "config = ln.Artifact.filter(ulabels__name=\"autophagy imaging\").filter(ulabels__name=\"scportrait config\").distinct().one()"
+    "# Get single-cell images and config\n",
+    "sc_datasets = ln.Artifact.filter(ulabels__name=\"autophagy imaging\").filter(\n",
+    "    ulabels__name=\"scportrait single-cell images\"\n",
+    ")\n",
+    "config = (\n",
+    "    ln.Artifact.filter(ulabels__name=\"autophagy imaging\")\n",
+    "    .filter(ulabels__name=\"scportrait config\")\n",
+    "    .distinct()\n",
+    "    .one()\n",
+    ")"
    ]
   },
   {
@@ -84,9 +91,7 @@
    ],
    "source": [
     "# Process single-cell images with scPortrait's featurizer\n",
-    "featurizer = CellFeaturizer(\n",
-    "    directory=\".\", config=config.cache(), project_location=None\n",
-    ")\n",
+    "featurizer = CellFeaturizer(directory=\".\", config=config.cache(), project_location=None)\n",
     "\n",
     "# Train on wildtype (WT) cells\n",
     "wt_cells_afs = sc_datasets.filter(ulabels__name=\"WT\")\n",
@@ -182,7 +187,9 @@
     "# we have two different conditions which will be the two classes that our classifier should be able to tell apart\n",
     "condition_uls = [\n",
     "    ln.ULabel.get(name=stimulation_name)\n",
-    "    for stimulation_name in set(af.features.get_values()[\"stimulation\"] for af in ko_cells_afs)\n",
+    "    for stimulation_name in set(\n",
+    "        af.features.get_values()[\"stimulation\"] for af in ko_cells_afs\n",
+    "    )\n",
     "]\n",
     "\n",
     "# we will store the calculated features in a dictionary for each condition\n",
