--- a/docs/imaging4.ipynb
+++ b/docs/imaging4.ipynb
@@ -59,14 +59,14 @@
     "\n",
     "# Define parameter values\n",
     "rfc_params = {\n",
-    "    'random_state': 42,\n",
-    "    'n_estimators': 100,\n",
-    "    'max_depth': 10,\n",
-    "    'min_samples_split': 2,\n",
-    "    'min_samples_leaf': 1,\n",
-    "    'max_features': 'sqrt',\n",
-    "    'criterion': 'gini',\n",
-    "    'bootstrap': True\n",
+    "    \"random_state\": 42,\n",
+    "    \"n_estimators\": 100,\n",
+    "    \"max_depth\": 10,\n",
+    "    \"min_samples_split\": 2,\n",
+    "    \"min_samples_leaf\": 1,\n",
+    "    \"max_features\": \"sqrt\",\n",
+    "    \"criterion\": \"gini\",\n",
+    "    \"bootstrap\": True,\n",
     "}\n",
     "\n",
     "ln.track(params=rfc_params)"
@@ -89,8 +89,12 @@
    "source": [
     "study = ln.ULabel.get(name=\"autophagy imaging\")\n",
     "\n",
-    "sc_datasets = ln.Artifact.filter(ulabels=study).filter(ulabels__name=\"scportrait single-cell images\")\n",
-    "featurized_datasets = ln.Artifact.filter(ulabels=study).filter(ulabels__name=\"single-cell image featurization results\")"
+    "sc_datasets = ln.Artifact.filter(ulabels=study).filter(\n",
+    "    ulabels__name=\"scportrait single-cell images\"\n",
+    ")\n",
+    "featurized_datasets = ln.Artifact.filter(ulabels=study).filter(\n",
+    "    ulabels__name=\"single-cell image featurization results\"\n",
+    ")"
    ]
   },
   {
