--- a/docs/imaging_ingest.ipynb
+++ b/docs/imaging_ingest.ipynb
@@ -258,7 +258,9 @@
    "source": [
     "# Ingest the imaging data directory, using the image_path prefix as the key\n",
     "# This ensures that the image_path and loaded Artifact paths still align\n",
-    "artifacts = ln.Artifact.from_dir(\"./input_data_imaging_usecase\", key=\"input_data_imaging_usecase\")\n",
+    "artifacts = ln.Artifact.from_dir(\n",
+    "    \"./input_data_imaging_usecase\", key=\"input_data_imaging_usecase\"\n",
+    ")\n",
     "ln.save(artifacts)"
    ]
   },
@@ -287,7 +289,11 @@
     }
    ],
    "source": [
-    "ln.Collection(artifacts, key=\"input_data_imaging_usecase\", description=\"TIFF stacks and metadata of mCherry-LC3B microscopy.\").save()"
+    "ln.Collection(\n",
+    "    artifacts,\n",
+    "    key=\"input_data_imaging_usecase\",\n",
+    "    description=\"TIFF stacks and metadata of mCherry-LC3B microscopy.\",\n",
+    ").save()"
    ]
   },
   {
