:pencil2: fix formating/typos

--- a/docs/imaging.ipynb
+++ b/docs/imaging.ipynb
@@ -22,7 +22,7 @@
    "id": "24edaaaf",
    "metadata": {},
    "source": [
-    "Here, you will learn how to structure, featurize, and make large imaging collection queryable for large-scale machine learning:\n",
+    "Here, you will learn how to structure, featurize, and make a large imaging collection queryable for large-scale machine learning:\n",
     "\n",
     "1. Load and annotate a {class}`~lamindb.Collection` of microscopy images (![imaging/6](https://img.shields.io/badge/imaging1/6-lightgrey))\n",
     "2. Generate single-cell images ([![imaging2/6](https://img.shields.io/badge/imaging2/6-lightgrey)](/imaging2))\n",
@@ -47,7 +47,7 @@
    "source": [
     "First, we will load and annotate a collection of microscopy images in TIFF format that [was previously uploaded](https://lamin.ai/scportrait/examples/transform/asoq6WyPequ8?).\n",
     "\n",
-    "The images used here were acquired as part of a [study](https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://www.biorxiv.org/content/10.1101/2023.06.01.542416v1&ved=2ahUKEwj3m56hs52LAxWxRfEDHQZwKZ8QFnoECBIQAQ&usg=AOvVaw04HsGDIPcIPr1ldblXuh0Z)) on autophagy, a cellular process during which cells recycle their components in autophagosomes.\n",
+    "The images used here were acquired as part of a [study](https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://www.biorxiv.org/content/10.1101/2023.06.01.542416v1&ved=2ahUKEwj3m56hs52LAxWxRfEDHQZwKZ8QFnoECBIQAQ&usg=AOvVaw04HsGDIPcIPr1ldblXuh0Z) on autophagy, a cellular process during which cells recycle their components in autophagosomes.\n",
     "\n",
     "The study tracked genetic determinants of autophagy through fluorescence microscopy of human U2OS cells.\n",
     "Cells were engineered to express two markers: the fluorescent autophagosome marker `mCherry-LC3B` and the fluorescent plasma membrane label `LckLip-mNeon`.\n",
@@ -263,7 +263,7 @@
     "`LckLip` is a membrane-targeted fluorescent protein, which helps outline the cellular boundaries of individual cells in the `Alexa488` channel.\n",
     "Furthermore, the cells’ DNA was stained using `Hoechst`, which we can visualize in the `DAPI` channel to identify the nuclei of individual cells.\n",
     "\n",
-    "In addition to expressing fluorescently tagged proteins, some of the cells have had the `EI24` gene knocked out, leading to two different genotypes: WT (wild-type) cells and `EI24KO` (knockout) cells.\n",
+    "In addition to expressing fluorescently tagged proteins, some of the cells have had the `EI24` gene knocked out, leading to two different genotypes: `WT` (wild-type) cells and `EI24KO` (knockout) cells.\n",
     "For each genotype, two different clonal cell lines were analyzed, with multiple fields of view (FOVs) captured per condition.\n",
     "\n",
     "To enable queries on our images, we annotate them with the corresponding metadata."
