:pencil2: fix typo

--- a/docs/imaging2.ipynb
+++ b/docs/imaging2.ipynb
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "309d38e0",
    "metadata": {},
    "outputs": [
@@ -535,11 +535,11 @@
     "\n",
     "fig, axs = plt.subplots(1, 3, figsize=(30, 10))\n",
     "sdata.pl.render_images(\"input_image\").pl.show(ax=axs[0], title=\"Input Image\");\n",
-    "sdata.pl.render_shapes(\"seg_all_nucleus_vectorized\", fill_alpha=0, outline_alpha=0.7, outline_width=0.7, outline_color = \"black\").pl.show(ax=axs[1], title=\"Segmentation Sasks\");\n",
-    "sdata.pl.render_shapes(\"seg_all_cytosol_vectorized\", fill_alpha=0, outline_alpha=0.7, outline_width=0.7, outline_color = \"black\").pl.show(ax=axs[1], title=\"Segmentation Sasks\");\n",
+    "sdata.pl.render_shapes(\"seg_all_nucleus_vectorized\", fill_alpha=0, outline_alpha=0.7, outline_width=0.7, outline_color = \"black\").pl.show(ax=axs[1], title=\"Segmentation Masks\");\n",
+    "sdata.pl.render_shapes(\"seg_all_cytosol_vectorized\", fill_alpha=0, outline_alpha=0.7, outline_width=0.7, outline_color = \"black\").pl.show(ax=axs[1], title=\"Segmentation Masks\");\n",
     "\n",
     "sdata.pl.render_images(\"input_image\").pl.show(ax=axs[2], title=\"Input Image\");\n",
-    "sdata.pl.render_shapes(\"seg_all_nucleus_vectorized\", fill_alpha=0, outline_alpha=0.7, outline_width=0.7, outline_color = \"white\").pl.show(ax=axs[2], title=\"Segmentation Sasks\");\n",
+    "sdata.pl.render_shapes(\"seg_all_nucleus_vectorized\", fill_alpha=0, outline_alpha=0.7, outline_width=0.7, outline_color = \"white\").pl.show(ax=axs[2], title=\"Segmentation Masks\");\n",
     "sdata.pl.render_shapes(\"seg_all_cytosol_vectorized\", fill_alpha=0, outline_alpha=0.7, outline_width=0.7, outline_color = \"white\").pl.show(ax=axs[2], title=\"Overlayed Results\");\n",
     "\n",
     "axs[0].axis(\"off\");\n",
@@ -2639,7 +2639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "f60cded7",
    "metadata": {},
    "outputs": [
@@ -2647,7 +2647,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[94m•\u001b[0m please hit CMD + s to save the notebook in your editor .. \u001b[92m✓\u001b[0m\n"
+      "\u001b[94m•\u001b[0m please hit CMD + s to save the notebook in your editor .. \u001b[92m✓\u001b[0m\n",
+      "\u001b[93m!\u001b[0m cells [(0, 42), (42, 2), (3, 5), (7, 13), (13, 11), (11, 24), (24, 52), (52, None), (None, 57)] were not run consecutively\n",
+      "\u001b[92m→\u001b[0m finished Run('MwMPcQpl') after 7m at 2025-02-28 19:19:45 UTC\n",
+      "\u001b[92m→\u001b[0m go to: https://lamin.ai/scportrait/examples/transform/9gzJFsXw1f6N0001\n",
+      "\u001b[92m→\u001b[0m to update your notebook from the CLI, run: lamin save /Users/sophia/Documents/GitHub/lamin-usecases/docs/imaging2.ipynb\n"
      ]
     }
    ],
