--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -600,50 +600,7 @@
    },
    "outputs": [],
    "source": [
-    "collection = ln.Collection(\n",
-    "    artifact, name=\"My versioned cytometry collection\", version=\"1\"\n",
-    ")\n",
-    "collection"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's inspect the features measured in this collection which were inherited from the artifact:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "collection.features"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This looks all good, hence, let's save it:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "collection.save()"
+    "ln.Collection(artifact, key=\"My versioned cytometry collection\", version=\"1\").save()"
    ]
   }
  ],
