--- a/docs/imaging3.ipynb
+++ b/docs/imaging3.ipynb
@@ -36,9 +36,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[92m→\u001b[0m connected lamindb: scportrait/examples\n",
-      "\u001b[92m→\u001b[0m loaded Transform('ujI2BcWc8AA60000'), re-started Run('aWmCDdv4...') at 2025-02-24 15:03:20 UTC\n",
-      "\u001b[92m→\u001b[0m notebook imports: bionty==1.1.0 lamindb==1.1.0 pandas==2.2.3 scportrait==1.1.1.dev0\n"
+      "\u001b[92m→\u001b[0m connected lamindb: scportrait/examples\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/sophia/mambaforge/envs/lamin/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m→\u001b[0m loaded Transform('ujI2BcWc8AA60003'), re-started Run('3tvyKj0o...') at 2025-03-05 15:17:35 UTC\n",
+      "\u001b[92m→\u001b[0m notebook imports: bionty==1.1.0 lamindb==1.1.1 pandas==2.2.3 scportrait==1.1.1.dev0\n"
      ]
     }
    ],
@@ -50,6 +64,14 @@
     "from scportrait.pipeline.featurization import CellFeaturizer\n",
     "\n",
     "ln.track()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0be3fe4",
+   "metadata": {},
+   "source": [
+    "We will generate these features on the basis of the previously generated single-cell image datasets."
    ]
   },
   {
@@ -76,22 +98,21 @@
    "execution_count": null,
    "id": "d72cf122",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "... synchronizing LsozDWhSsP9ajLJL0000.h5: 100.0%\n",
-      "... synchronizing DkbGSFdQT3AXjqQt0000.h5: 100.0%\n",
-      "... synchronizing Ytx4E35Xfe3ubE190000.h5: 100.0%\n",
-      "... synchronizing e1KSk8g7Y1GuxX6S0000.h5: 100.0%\n",
-      "... synchronizing hCw1GXdk9tonZ7DG0000.h5: 100.0%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Process single-cell images with scPortrait's featurizer\n",
     "featurizer = CellFeaturizer(directory=\".\", config=config.cache(), project_location=None)\n",
+    "\n",
+    "def featurize_datasets(artifact_list) -> pd.DataFrame:\n",
+    "    paths = [dataset.load().path for dataset in artifact_list]\n",
+    "    dataset_lookup = {cell.uid: idx for idx, cell in enumerate(artifact_list)}\n",
+    "    labels = list(dataset_lookup.values())\n",
+    "    results = featurizer.process(\n",
+    "        dataset_paths=paths,\n",
+    "        dataset_labels=labels,\n",
+    "        return_results=True\n",
+    "    )\n",
+    "    return results\n",
     "\n",
     "# Train on wildtype (WT) cells\n",
     "wt_cells_afs = sc_datasets.filter(ulabels__name=\"WT\")\n",
@@ -102,19 +123,15 @@
     "    for stim_name in set(af.features.get_values()[\"stimulation\"] for af in wt_cells_afs)\n",
     "]\n",
     "\n",
-    "# Store the calculated features in a dictionary for each condition\n",
-    "condition_lookup = {}\n",
     "features = None\n",
     "for idx, condition_ul in enumerate(condition_uls):\n",
     "    cells = wt_cells_afs.filter(ulabels=condition_ul)\n",
-    "    paths = [dataset.load().path for dataset in cells]\n",
-    "    dataset_lookup = {cell.uid: idx for idx, cell in enumerate(cells)}\n",
-    "    labels = list(dataset_lookup.values())\n",
-    "    results = featurizer.process(\n",
-    "        extraction_dir=paths[0], labels=labels[0], return_results=True\n",
-    "    )\n",
+    "    results = featurize_datasets(cells)\n",
+    "\n",
+    "    # save condition as a class label\n",
     "    results[\"class\"] = idx\n",
-    "    condition_lookup[condition_ul.name] = 1\n",
+    "\n",
+    "    # concatenate results together\n",
     "    if features is None:\n",
     "        features = results\n",
     "    else:\n",
@@ -122,8 +139,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ef6ab863",
+   "metadata": {},
+   "source": [
+    "We upload the generated features to our instance."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "7740618b",
    "metadata": {},
    "outputs": [
@@ -131,7 +156,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[92m→\u001b[0m found artifact with same hash: Artifact(uid='OZUxfqXUi6YtFrVW0000', is_latest=True, description='featurized single-cell images', suffix='.parquet', kind='dataset', otype='DataFrame', size=67768, hash='Xm_6eKDzVstPMARccKPHzg', space_id=1, storage_id=1, run_id=127, created_by_id=3, created_at=2025-02-24 15:23:27 UTC); to track this artifact as an input, use: ln.Artifact.get()\n"
+      "\u001b[92m→\u001b[0m found artifact with same hash: Artifact(uid='fvia2cEwivSzjcUZ0000', is_latest=True, description='featurized single-cell images', suffix='.parquet', kind='dataset', otype='DataFrame', size=143938, hash='nAqQF1fy9wxQ4H0wvA8Lgg', n_observations=566, space_id=1, storage_id=1, run_id=205, created_by_id=4, created_at=2025-03-05 15:19:22 UTC); to track this artifact as an input, use: ln.Artifact.get()\n"
      ]
     }
    ],
@@ -141,7 +166,6 @@
     ").save()\n",
     "artifact.cell_lines.add(bt.CellLine.get(name=\"U2OS\"))\n",
     "\n",
-    "# annotate metadata\n",
     "artifact.features.add_values(\n",
     "    {\n",
     "        \"study\": \"autophagy imaging\",\n",
@@ -161,30 +185,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "5878d618",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "... synchronizing ws65rSiY0he9SSve0000.h5: 100.0%\n",
-      "... synchronizing zJZEvnfApxBWCJzZ0000.h5: 100.0%\n",
-      "... synchronizing jP8M4lTmCX4A3xCs0000.h5: 100.0%\n",
-      "... synchronizing DQQX6jIYqsxZv9ec0000.h5: 100.0%\n",
-      "... synchronizing cYLJWBZoUyQxFwii0000.h5: 100.0%\n",
-      "... synchronizing 9CMfEX06h1RJrjPP0000.h5: 100.0%\n",
-      "... synchronizing Kt9FXnHBQeZ8F0mj0000.h5: 100.0%\n",
-      "... synchronizing P6r2aqhFZomH93uJ0000.h5: 100.0%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Train on wildtype cells\n",
+    "# Process KO cells to see if they behave differently\n",
     "ko_cells_afs = sc_datasets.filter(ulabels__name=\"EI24KO\")\n",
     "\n",
-    "# we have two different conditions which will be the two classes that our classifier should be able to tell apart\n",
+    "# we have the same two conditions as before\n",
     "condition_uls = [\n",
     "    ln.ULabel.get(name=stimulation_name)\n",
     "    for stimulation_name in set(\n",
@@ -192,19 +201,14 @@
     "    )\n",
     "]\n",
     "\n",
-    "# we will store the calculated features in a dictionary for each condition\n",
-    "condition_lookup = {}\n",
     "features_ko = None\n",
     "for idx, condition_ul in enumerate(condition_uls):\n",
     "    cells = ko_cells_afs.filter(ulabels=condition_ul)\n",
-    "    paths = [dataset.load().path for dataset in cells]\n",
-    "    dataset_lookup = {cell.uid: idx for idx, cell in enumerate(cells)}\n",
-    "    labels = list(dataset_lookup.values())\n",
-    "    results = featurizer.process(\n",
-    "        extraction_dir=paths[0], labels=labels[0], return_results=True\n",
-    "    )\n",
+    "    results = featurize_datasets(cells)\n",
+    "\n",
+    "    # save condition as a class label\n",
     "    results[\"class\"] = idx\n",
-    "    condition_lookup[condition_ul.name] = 1\n",
+    "\n",
     "    if features_ko is None:\n",
     "        features_ko = results\n",
     "    else:\n",
@@ -213,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "88ad588b",
    "metadata": {},
    "outputs": [
@@ -221,7 +225,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "... uploading vqgUwzZxmlVMNRj00000.parquet: 100.0%\n"
+      "... uploading T7IWliSAjQBDQFmb0000.parquet: 100.0%\n"
      ]
     }
    ],
@@ -243,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "5f625fba",
    "metadata": {},
    "outputs": [
@@ -251,17 +255,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[94m•\u001b[0m please hit CTRL + s to save the notebook in your editor  \u001b[92m✓\u001b[0m\n",
-      "\u001b[93m!\u001b[0m cells [(2, None), (None, 14), (15, 17)] were not run consecutively\n",
-      "\u001b[92m→\u001b[0m finished Run('aWmCDdv4') after 44m at 2025-02-24 15:47:26 UTC\n",
-      "\u001b[92m→\u001b[0m go to: https://lamin.ai/scportrait/examples/transform/ujI2BcWc8AA60000\n",
-      "\u001b[92m→\u001b[0m to update your notebook from the CLI, run: lamin save /home/lukas/code/lamin-usecases/docs/imaging3.ipynb\n"
+      "\u001b[94m•\u001b[0m please hit CMD + s to save the notebook in your editor  \u001b[92m✓\u001b[0m\n",
+      "\u001b[93m!\u001b[0m cells [(2, None), (None, 10)] were not run consecutively\n",
+      "\u001b[92m→\u001b[0m finished Run('3tvyKj0o') after 6m at 2025-03-05 15:24:17 UTC\n",
+      "\u001b[92m→\u001b[0m go to: https://lamin.ai/scportrait/examples/transform/ujI2BcWc8AA60003\n",
+      "\u001b[92m→\u001b[0m to update your notebook from the CLI, run: lamin save /Users/sophia/Documents/GitHub/lamin-usecases/docs/imaging3.ipynb\n"
      ]
     }
    ],
    "source": [
     "ln.finish()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5db64392",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -271,7 +283,7 @@
    "notebook_metadata_filter": "-all"
   },
   "kernelspec": {
-   "display_name": "lamindb",
+   "display_name": "lamin",
    "language": "python",
    "name": "python3"
   },
@@ -285,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
