--- a/docs/imaging3.ipynb
+++ b/docs/imaging3.ipynb
@@ -51,7 +51,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[92m→\u001b[0m loaded Transform('ujI2BcWc8AA60003'), re-started Run('3tvyKj0o...') at 2025-03-05 15:17:35 UTC\n",
+      "\u001b[92m→\u001b[0m there already is a notebook with `key` 'imaging3.ipynb', creating new version 'ujI2BcWc8AA60005'\n",
+      "\u001b[92m→\u001b[0m created Transform('ujI2BcWc8AA60005'), started new Run('qbcLW4xN...') at 2025-03-05 15:34:53 UTC\n",
       "\u001b[92m→\u001b[0m notebook imports: bionty==1.1.0 lamindb==1.1.1 pandas==2.2.3 scportrait==1.1.1.dev0\n"
      ]
     }
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d72cf122",
    "metadata": {},
    "outputs": [],
@@ -105,13 +106,17 @@
     "\n",
     "def featurize_datasets(artifact_list) -> pd.DataFrame:\n",
     "    paths = [dataset.load().path for dataset in artifact_list]\n",
-    "    dataset_lookup = {cell.uid: idx for idx, cell in enumerate(artifact_list)}\n",
-    "    labels = list(dataset_lookup.values())\n",
+    "    dataset_lookup = {idx: cell.uid for idx, cell in enumerate(artifact_list)}\n",
+    "    labels = list(dataset_lookup.keys())\n",
     "    results = featurizer.process(\n",
     "        dataset_paths=paths,\n",
     "        dataset_labels=labels,\n",
     "        return_results=True\n",
     "    )\n",
+    "\n",
+    "    # ensure we store the original dataset uid to be able to track featurization results back to their original dataset\n",
+    "    results[\"dataset\"] = results[\"label\"].map(dataset_lookup)\n",
+    "    del results[\"label\"]\n",
     "    return results\n",
     "\n",
     "# Train on wildtype (WT) cells\n",
@@ -148,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "7740618b",
    "metadata": {},
    "outputs": [
@@ -156,13 +161,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[92m→\u001b[0m found artifact with same hash: Artifact(uid='fvia2cEwivSzjcUZ0000', is_latest=True, description='featurized single-cell images', suffix='.parquet', kind='dataset', otype='DataFrame', size=143938, hash='nAqQF1fy9wxQ4H0wvA8Lgg', n_observations=566, space_id=1, storage_id=1, run_id=205, created_by_id=4, created_at=2025-03-05 15:19:22 UTC); to track this artifact as an input, use: ln.Artifact.get()\n"
+      "... uploading dSQkaFNDfoyEsbG70000.parquet: 100.0%\n"
      ]
     }
    ],
    "source": [
     "artifact = ln.Artifact.from_df(\n",
-    "    features, description=\"featurized single-cell images\"\n",
+    "    features, \n",
+    "    description=\"featurized single-cell images\",\n",
+    "    key = \"featurization_results/WT.parquet\"\n",
     ").save()\n",
     "artifact.cell_lines.add(bt.CellLine.get(name=\"U2OS\"))\n",
     "\n",
@@ -185,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "5878d618",
    "metadata": {},
    "outputs": [],
@@ -217,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "88ad588b",
    "metadata": {},
    "outputs": [
@@ -225,13 +232,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "... uploading T7IWliSAjQBDQFmb0000.parquet: 100.0%\n"
+      "... uploading YCsZhphWpiECev3N0000.parquet: 100.0%\n",
+      "\u001b[93m!\u001b[0m The cache path /Users/sophia/Library/Caches/lamindb/lamin-eu-central-1/r7YUayXjktSb/featurization_results/EI24KO.parquet already exists, replacing it.\n"
      ]
     }
    ],
    "source": [
     "artifact = ln.Artifact.from_df(\n",
-    "    features_ko, description=\"featurized single-cell images\"\n",
+    "    features_ko, description=\"featurized single-cell images\",\n",
+    "    key = \"featurization_results/EI24KO.parquet\"\n",
     ").save()\n",
     "artifact.cell_lines.add(bt.CellLine.filter(name=\"U2OS\").one())\n",
     "\n",
@@ -247,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "5f625fba",
    "metadata": {},
    "outputs": [
@@ -255,10 +264,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[94m•\u001b[0m please hit CMD + s to save the notebook in your editor  \u001b[92m✓\u001b[0m\n",
-      "\u001b[93m!\u001b[0m cells [(2, None), (None, 10)] were not run consecutively\n",
-      "\u001b[92m→\u001b[0m finished Run('3tvyKj0o') after 6m at 2025-03-05 15:24:17 UTC\n",
-      "\u001b[92m→\u001b[0m go to: https://lamin.ai/scportrait/examples/transform/ujI2BcWc8AA60003\n",
+      "\u001b[94m•\u001b[0m please hit CMD + s to save the notebook in your editor . \u001b[92m✓\u001b[0m\n",
+      "\u001b[92m→\u001b[0m finished Run('qbcLW4xN') after 20s at 2025-03-05 15:35:14 UTC\n",
+      "\u001b[92m→\u001b[0m go to: https://lamin.ai/scportrait/examples/transform/ujI2BcWc8AA60005\n",
       "\u001b[92m→\u001b[0m to update your notebook from the CLI, run: lamin save /Users/sophia/Documents/GitHub/lamin-usecases/docs/imaging3.ipynb\n"
      ]
     }
@@ -266,14 +274,6 @@
    "source": [
     "ln.finish()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5db64392",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
