--- a/docs/imaging3.ipynb
+++ b/docs/imaging3.ipynb
@@ -51,8 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[92m→\u001b[0m there already is a notebook with `key` 'imaging3.ipynb', creating new version 'ujI2BcWc8AA60005'\n",
-      "\u001b[92m→\u001b[0m created Transform('ujI2BcWc8AA60005'), started new Run('qbcLW4xN...') at 2025-03-05 15:34:53 UTC\n",
+      "\u001b[92m→\u001b[0m loaded Transform('ujI2BcWc8AA60007'), re-started Run('sHU2epGT...') at 2025-03-06 15:09:08 UTC\n",
       "\u001b[92m→\u001b[0m notebook imports: bionty==1.1.0 lamindb==1.1.1 pandas==2.2.3 scportrait==1.1.1.dev0\n"
      ]
     }
@@ -96,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d72cf122",
    "metadata": {},
    "outputs": [],
@@ -128,13 +127,17 @@
     "    for stim_name in set(af.features.get_values()[\"stimulation\"] for af in wt_cells_afs)\n",
     "]\n",
     "\n",
+    "# map condition names to class labels\n",
+    "class_lookup = {\"untreated\": 0,\n",
+    "                \"14h Torin-1\": 1}\n",
+    "\n",
     "features = None\n",
-    "for idx, condition_ul in enumerate(condition_uls):\n",
+    "for ix, condition_ul in enumerate(condition_uls):\n",
     "    cells = wt_cells_afs.filter(ulabels=condition_ul)\n",
     "    results = featurize_datasets(cells)\n",
     "\n",
     "    # save condition as a class label\n",
-    "    results[\"class\"] = idx\n",
+    "    results[\"class\"] = class_lookup[condition_ul.name]\n",
     "\n",
     "    # concatenate results together\n",
     "    if features is None:\n",
@@ -161,7 +164,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "... uploading dSQkaFNDfoyEsbG70000.parquet: 100.0%\n"
+      "\u001b[92m→\u001b[0m found artifact with same hash: Artifact(uid='dSQkaFNDfoyEsbG70002', is_latest=True, key='featurization_results/WT.parquet', description='featurized single-cell images', suffix='.parquet', kind='dataset', otype='DataFrame', size=144333, hash='T2VEWFxCEh9LcUO2nchY1Q', n_observations=566, space_id=1, storage_id=1, run_id=215, created_by_id=4, created_at=2025-03-06 15:08:44 UTC); to track this artifact as an input, use: ln.Artifact.get()\n"
      ]
     }
    ],
@@ -214,7 +217,7 @@
     "    results = featurize_datasets(cells)\n",
     "\n",
     "    # save condition as a class label\n",
-    "    results[\"class\"] = idx\n",
+    "    results[\"class\"] = class_lookup[condition_ul.name]\n",
     "\n",
     "    if features_ko is None:\n",
     "        features_ko = results\n",
@@ -232,8 +235,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "... uploading YCsZhphWpiECev3N0000.parquet: 100.0%\n",
-      "\u001b[93m!\u001b[0m The cache path /Users/sophia/Library/Caches/lamindb/lamin-eu-central-1/r7YUayXjktSb/featurization_results/EI24KO.parquet already exists, replacing it.\n"
+      "\u001b[92m→\u001b[0m found artifact with same hash: Artifact(uid='YCsZhphWpiECev3N0002', is_latest=True, key='featurization_results/EI24KO.parquet', description='featurized single-cell images', suffix='.parquet', kind='dataset', otype='DataFrame', size=198112, hash='1Yzh3gRMyKxZOM--oVVYCg', n_observations=848, space_id=1, storage_id=1, run_id=215, created_by_id=4, created_at=2025-03-06 15:08:53 UTC); to track this artifact as an input, use: ln.Artifact.get()\n"
      ]
     }
    ],
@@ -265,8 +267,9 @@
      "output_type": "stream",
      "text": [
       "\u001b[94m•\u001b[0m please hit CMD + s to save the notebook in your editor . \u001b[92m✓\u001b[0m\n",
-      "\u001b[92m→\u001b[0m finished Run('qbcLW4xN') after 20s at 2025-03-05 15:35:14 UTC\n",
-      "\u001b[92m→\u001b[0m go to: https://lamin.ai/scportrait/examples/transform/ujI2BcWc8AA60005\n",
+      "\u001b[93m!\u001b[0m cells [(2, None), (None, 4)] were not run consecutively\n",
+      "\u001b[92m→\u001b[0m finished Run('sHU2epGT') after 22s at 2025-03-06 15:09:30 UTC\n",
+      "\u001b[92m→\u001b[0m go to: https://lamin.ai/scportrait/examples/transform/ujI2BcWc8AA60007\n",
       "\u001b[92m→\u001b[0m to update your notebook from the CLI, run: lamin save /Users/sophia/Documents/GitHub/lamin-usecases/docs/imaging3.ipynb\n"
      ]
     }
