Fixes and improvements

--- a/docs/imaging4.ipynb
+++ b/docs/imaging4.ipynb
@@ -5,7 +5,7 @@
    "id": "f9cda35d",
    "metadata": {},
    "source": [
-    "# Train machine learning model to identify autophagy positive cells"
+    "# Train a machine learning model to identify autophagy-positive cells"
    ]
   },
   {
@@ -13,14 +13,14 @@
    "id": "073d025e",
    "metadata": {},
    "source": [
-    "Goal of this notebook is to train a ML model to distininguish between autophagy-positive and  autophagy-negative cells based on our pre-calculated image features.\n",
+    "The goal of this notebook is to train a ML model to distininguish between autophagy-positive and autophagy-negative cells based on pre-calculated image features.\n",
     "\n",
     "We have defined our classes as follows:\n",
     "\n",
     "``Class 0`` : unstimulated WT cells  \n",
     "``Class 1`` : 14h Torin-1 stimulated WT cells  \n",
     "\n",
-    "After training and evaluating our model we want to see how the ``EI24KO`` cells compare to the ``WT`` cells."
+    "After training and evaluating our model we want to see how cells without a functional *EI24* gene (``EI24KO`` cells) compare to ``WT`` cells."
    ]
   },
   {
@@ -305,11 +305,11 @@
    "id": "c5a956e3",
    "metadata": {},
    "source": [
-    "As we can see our classifier has a failry high performance with an AUC of 0.77 considering that it was only trained on very few input images. This is already much better than a random classifier which we would expect to have an AUC of 0.5.\n",
+    "Considering that it was only trained on very few input images, our classifier performs well with an AUC of 0.77. This is already much better than a random classifier which we would expect to have an AUC of 0.5.\n",
     "\n",
-    "Since the AUC isn't 1 though we know that our model is still making some mistakes. We can further investigate this through a confusion matrix. Our model is performing very well at recognizing autophagy negative cells correctly identyinh 92% of the cells in our dataset. Unfortunately our model isn't very good yet at correctly identifying autophagy postive cells. Its classifying less than 50% of these cells correctly.\n",
+    "However, since the AUC is < 1, our model is still appears to make some mistakes. We can further investigate this through a confusion matrix. Our classifier is performing well at recognizing autophagy negative cells, correctly identifying 92% of the examples in our dataset. Unfortunately, the classifier is not yet very good at correctly identifying autophagy-postive cells. Less than 50% of these examples are classified correctly.\n",
     "\n",
-    "Lets visualize some of the cells from each class to see if we can gain some insights into what our model is doing."
+    "Let's visualize some of the cells from each class to see if we can gain some insights into what our model is doing."
    ]
   },
   {
@@ -376,25 +376,25 @@
    "metadata": {},
    "source": [
     "Looking at the False Positives (i.e. cells that look stimulated despite not having been stimulated) we can see two different types of cells\n",
-    "1. very small cells that don't really show any visible autophagosomes\n",
-    "2. larger cells that clearly show some autophagosomes\n",
+    "1. Very small cells that don't show any visible autophagosomes\n",
+    "2. Larger cells that clearly show some autophagosomes\n",
     "\n",
-    "The cells of type 1 look like they are the result of our model making mistakes, but the cells of type 2 look much more similar to TP cells than TN cells. Based on literature we know that cells can under go spontaneous autophagy even in the absence of Torin-1, e.g. as a result of a local nutrient scarcity. Since our class labelling is just derived from the fact that the cells have been untreated we would actually be incorrectly annotating these cells in our training and test dataset. In these cases our model wouldn't actually be making a mistake. \n",
+    "The cells of type 1 look like they are the result of our model making mistakes, but the cells of type 2 look much more similar to TP cells than TN cells. Based on literature we know that cells can under go spontaneous autophagy even in the absence of Torin-1, for example as a result of nutrient scarcity. Since our class labelling is just based on the fact that the cells have not been treated with Torin-1, we would actually be annotating these cells incorrectly. In these cases our model does not actually make a mistake, but has in fact uncovered mislabelled examples in the dataset.\n",
     "\n",
-    "Looking at the False Negatives (i.e. cells that the model identifies as having been unstimulated despite having been stimulated) the cells actually look fairly homogenous and actually look more comparable to the True Positive Population. So in this case it really does look like our model is simply making a mistake. \n",
+    "Looking at the False Negatives (i.e. cells that the model identifies as having been unstimulated despite having been stimulated) the cells appear homogenous and look more comparable to the True Positive Population. So in this case it seems our model is making a mistake. \n",
     "\n",
-    "If we would want to apply this model in a biological context we would thus probably need to invest some more time and effor in improving it before hand! \n",
+    "Before applying this model in a biological context, we would therefore probably need to invest some more time and effort into improving it! \n",
     "\n",
     "We could for example:\n",
-    "1. train our model on more input data to make it more robust\n",
-    "2. perform a pre-screening of our training data to ensure we remove any incorrectly labelled cells\n",
-    "3. improve the image features we are training our model on to better reflect the biology we are interested in\n",
+    "1. Train our model on more input data to make it more robust\n",
+    "2. Perform a pre-screening of our training data to ensure we remove any incorrectly labelled cells\n",
+    "3. Improve the image features we are training our model on to better reflect the biology we are interested in\n",
     "\n",
-    "If you are interested in finding out more about this you can check out the [original paper](https://www.biorxiv.org/content/10.1101/2023.06.01.542416v1) for this data where they trained a deep-learning model to be able to classify these cells with a much higher accuracy. \n",
+    "If you are interested in finding out more you can check out the [original paper](https://www.biorxiv.org/content/10.1101/2023.06.01.542416v1) for these data where the authors trained a deep learning model to classify these cells with a much higher accuracy. \n",
     "\n",
-    "## Investigate the EI24 KO cells\n",
+    "## Investigate the *EI24* KO cells\n",
     "\n",
-    "Now lets take a look at the EI24 cells.\n"
+    "Now lets take a look at the EI24-deficient cells.\n"
    ]
   },
   {
@@ -449,7 +449,7 @@
    "id": "4e43ee56",
    "metadata": {},
    "source": [
-    "Interestingly, our model classifys a much higher percentage of stimulated cells as being unstimulated. Lets again take a look at the images."
+    "Interestingly, our model classifies a high percentage of stimulated *EI24*-KO cells as being unstimulated. Lets take a look at the images again."
    ]
   },
   {
@@ -499,7 +499,7 @@
    "id": "b05fbc2b",
    "metadata": {},
    "source": [
-    "The EI24 KO cells seem to show a deficiet in the formation of autophagosomes. The cells even when stimulated look much more comparable to both the WT unstimated cells and the EI24 unstimulated cells than our control autophagy positive population. So indeed it looks like our model was correct in this instance."
+    "The *EI24* KO cells have fewer LC3 puncta, and seem to show a defect in the formation of autophagosomes. Even when stimulated, *EI24* KO cells look comparable to unstimated cells. In this instance, out model appears to correctly identify the biological effect of a deficiency in the *EI24* gene."
    ]
   },
   {
