--- a/docs/imaging3.ipynb
+++ b/docs/imaging3.ipynb
@@ -51,7 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[92m→\u001b[0m loaded Transform('ujI2BcWc8AA60007'), re-started Run('sHU2epGT...') at 2025-03-06 15:09:08 UTC\n",
+      "\u001b[92m→\u001b[0m created Transform('kts9n4N0eSF10000'), started new Run('5MMXOUo5...') at 2025-03-07 14:47:26 UTC\n",
       "\u001b[92m→\u001b[0m notebook imports: bionty==1.1.0 lamindb==1.1.1 pandas==2.2.3 scportrait==1.1.1.dev0\n"
      ]
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d72cf122",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[92m→\u001b[0m found artifact with same hash: Artifact(uid='dSQkaFNDfoyEsbG70002', is_latest=True, key='featurization_results/WT.parquet', description='featurized single-cell images', suffix='.parquet', kind='dataset', otype='DataFrame', size=144333, hash='T2VEWFxCEh9LcUO2nchY1Q', n_observations=566, space_id=1, storage_id=1, run_id=215, created_by_id=4, created_at=2025-03-06 15:08:44 UTC); to track this artifact as an input, use: ln.Artifact.get()\n"
+      "... uploading JE2LqNnNFZf1fhYz0000.parquet: 100.0%\n",
+      "\u001b[93m!\u001b[0m The cache path /Users/sophia/Library/Caches/lamindb/lamin-eu-central-1/r7YUayXjktSb/featurization_results/WT.parquet already exists, replacing it.\n"
      ]
     }
    ],
@@ -235,7 +236,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[92m→\u001b[0m found artifact with same hash: Artifact(uid='YCsZhphWpiECev3N0002', is_latest=True, key='featurization_results/EI24KO.parquet', description='featurized single-cell images', suffix='.parquet', kind='dataset', otype='DataFrame', size=198112, hash='1Yzh3gRMyKxZOM--oVVYCg', n_observations=848, space_id=1, storage_id=1, run_id=215, created_by_id=4, created_at=2025-03-06 15:08:53 UTC); to track this artifact as an input, use: ln.Artifact.get()\n"
+      "... uploading M9qK19vdRPprxvA40000.parquet: 100.0%\n",
+      "\u001b[93m!\u001b[0m The cache path /Users/sophia/Library/Caches/lamindb/lamin-eu-central-1/r7YUayXjktSb/featurization_results/EI24KO.parquet already exists, replacing it.\n"
      ]
     }
    ],
@@ -258,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "5f625fba",
    "metadata": {},
    "outputs": [
@@ -266,11 +268,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[94m•\u001b[0m please hit CMD + s to save the notebook in your editor . \u001b[92m✓\u001b[0m\n",
-      "\u001b[93m!\u001b[0m cells [(2, None), (None, 4)] were not run consecutively\n",
-      "\u001b[92m→\u001b[0m finished Run('sHU2epGT') after 22s at 2025-03-06 15:09:30 UTC\n",
-      "\u001b[92m→\u001b[0m go to: https://lamin.ai/scportrait/examples/transform/ujI2BcWc8AA60007\n",
-      "\u001b[92m→\u001b[0m to update your notebook from the CLI, run: lamin save /Users/sophia/Documents/GitHub/lamin-usecases/docs/imaging3.ipynb\n"
+      "\u001b[94m•\u001b[0m please hit CMD + s to save the notebook in your editor .... still waiting .....\n",
+      "............... \u001b[92m✓\u001b[0m\n"
      ]
     }
    ],
